# flake8-dunder-all

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
src/flake8_dunder_all/: __init__.py
