[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flake8-dunder-all"
description = "flake8 plugin dealing with modules' __all__"
authors = [
    {name = "Francis CLAIRICIA-ROSE-CLAIRE-JOSEPHINE", email = "clairicia.rcj.francis@gmail.com"},
]
dependencies = [
    "flake8>=6.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license-files = { paths = ["LICENSE"] }
classifiers=[
    "Framework :: Flake8",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/francis-clairicia/flake8-dunder-all"

[project.entry-points."flake8.extension"]
DAL = "flake8_dunder_all:DunderAll"

############################ pdm configuration ############################
[tool.pdm.scripts]
mypy = "mypy --config-file=pyproject.toml --pretty src"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.2.0",
    "hatch>=1.6.3",
]
format = [
    "isort!=5.11.0,>=5.10.1",
    "black>=22.6.0",
]
lint = [
    "mypy==1.1.1",
]

############################ hatchling configuration ############################

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.hatch.version]
path = "src/flake8_dunder_all/__init__.py"

############################ Development tools configuration ############################

[tool.isort]
profile = "black"
line_length = 130
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "EASYNETWORK", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_easynetwork = ["easynetwork"]
add_imports = ["from __future__ import annotations"]
extend_skip = ["devtools"]

[tool.black]
line-length = 130
target-version = ["py310"]
force-exclude = "(devtools/)"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
python_version = "3.10"
show_error_codes = true
warn_unused_configs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
no_implicit_reexport = true
strict_equality = true
enable_error_code = ["truthy-bool", "ignore-without-code"]
